--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
 	"main": "index.html",
 	"name": "poedex",
 	"description": "Manage your PoE inventory and compare pricing",
-	"version": "1.0.2",
+	"version": "1.0.3",
 	"keywords": [ "poe", "node-webkit" ],
 	"window": {
-		"title": "PoE Dex",
+		"title": "PoE Dex 1.0.3",
 		"icon": "icon.png",
 		"toolbar": true
 	},
